--- a/css/style.css
+++ b/css/style.css
@@ -1,23 +1,458 @@
+:root {
+  --clr-bg: #d8dee9;
+  --clr-bg-inverse-darker: #434c5e;
+  --clr-bg-inverse: #4c566a;
+  --clr-txt: #3b4252;
+  --clr-txt-inverse: #e5e9f0;
+  --clr-objects: #5e81ac;
+  --clr-objects-object-shadow: #b48ead;
+  --clr-objects-object-shadow-inverse: #ebcb8b;
+  --clr-objects-alt1: #81a1c1;
+
+  --typewriterSpeed: 0s;
+  --typewriterCharacters: 25;
+
+  --ff-primary: "Source Code Pro", monospace;
+  --ff-body: var(--ff-primary);
+  --ff-heading: var(--ff-primary);
+
+  --fw-light: 400;
+  --fw-regular: 500;
+  --fw-semi-bold: 600;
+  --fw-bold: 700;
+
+  --fs-300: 0.8125rem;
+  --fs-400: 1rem;
+  --fs-500: 1.15rem;
+  --fs-550: 1.5rem;
+  --fs-600: 1.875rem;
+  --fs-700: 2.5rem;
+  --fs-800: 3.5rem;
+
+  --fs-body: var(--fs-400);
+  --fs-nav: var(--fs-500);
+  --fs-button: var(--fs-300);
+  --fs-h2: var(--fs-600);
+  --fs-h1: var(--fs-700);
+}
+
+/* For larger screens */
+@media (min-width: 50em) {
+  :root {
+    --fs-body: var(--fs-500);
+    --fs-h1: var(--fs-800);
+    --fs-h2: var(--fs-700);
+    --fs-nav: var(--fs-600);
+    --fs-button: var(--fs-300);
+  }
+}
+
+/* CSS reset*/
+* {
+  margin: 0;
+  padding: 0;
+  font: inherit;
+  box-sizing: border-box;
+}
+
+html {
+  scroll-behavior: smooth;
+  scroll-padding-top: calc(var(--scroll-padding)-2rem);
+  height: 100%;
+}
+
+body {
+  text-rendering: optimizeSpeed;
+  line-height: 1.5;
+  overflow-x: hidden;
+  height: 100%;
+  /* background-color: red; */
+}
+
+img,
+picture,
+svg {
+  max-width: 100%;
+  display: block;
+}
+
+/* Utility classes */
+
+.flex {
+  display: flex;
+  gap: var(--gap, 1rem);
+}
+
+::-webkit-scrollbar {
+  width: 0.75em;
+}
+
+::-webkit-scrollbar-track {
+  background-color: var(--clr-bg-inverse-darker);
+}
+
+::-webkit-scrollbar-thumb {
+  background-color: var(--clr-objects-alt1);
+  border: 0.15em solid var(--clr-bg-inverse-darker);
+  border-radius: 1rem;
+}
+
+@supports (scrollbar-color: red blue) {
+  * {
+    scrollbar-color: var(--clr-objects-alt1) var(--clr-bg-inverse-darker);
+  }
+}
+
+body {
+  background-color: var(--clr-bg);
+  color: var(--clr-txt);
+  flex-direction: column;
+  justify-content: space-between;
+  /* background-color: blue; */
+}
+
+.sr-only {
+  border: 0;
+  height: 0;
+  width: 0;
+  margin: 0;
+  padding: 0;
+  font-size: 0;
+  overflow: hidden;
+  white-space: nowrap;
+  position: relative;
+  z-index: 1;
+  float: left;
+}
+
+.primary-header {
+  background-color: var(--clr-bg);
+  color: var(--clr-txt);
+  width: 100%;
+  justify-content: space-around;
+  align-items: center;
+  height: 10vh;
+  position: fixed;
+  padding: 0 3rem;
+  z-index: 999;
+}
+
+.mobile-nav-toggle {
+  display: none;
+}
+
+.primary-navigation {
+  list-style: none;
+}
+
+.primary-header .herotext {
+  font-size: var(--fs-600);
+  font-weight: var(--fw-bold);
+  text-decoration: none;
+  /* margin-left: auto;
+  margin-right: auto; */
+}
+
+.herotext a {
+  text-decoration: none;
+  color: var(--clr-objects);
+}
+
+.primary-navigation {
+  position: fixed;
+  justify-content: space-between;
+  align-items: center;
+  list-style: none;
+  color: var(--clr-txt);
+  background-color: transparent;
+  margin-left: auto;
+  margin-right: auto;
+  z-index: inherit;
+}
+
+.primary-navigation a {
+  text-decoration: none;
+  color: inherit;
+  font-size: var(--fs-500);
+  font-weight: var(--fw-light);
+  position: relative;
+}
+
+.primary-navigation a span {
+  font-size: var(--fs-500);
+  font-weight: var(--fw-bold);
+  color: var(--clr-objects);
+}
+
+.primary-navigation a::after {
+  position: absolute;
+  content: "";
+  /* margin-top: 5rem; */
+  left: 0;
+  bottom: 0;
+  width: 100%;
+  height: 2px;
+  background-color: #bf616a;
+
+  transform: scaleX(0);
+  transform-origin: right;
+  transition: transform 250ms ease-in;
+}
+
+.primary-navigation a:hover::after {
+  transform: scaleX(1);
+  transform-origin: left;
+}
+
 .intro {
   display: flex;
   flex-direction: column;
-  margin-left: auto;
-  margin-right: auto;
+  margin: 0 auto;
+  padding: 5rem 0;
   width: 50vw;
+}
+
+.intro h1 {
+  font-size: var(--fs-800);
+  width: max-content;
+  color: var(--clr-objects);
 }
 
 .talks {
   display: flex;
   flex-direction: column;
-  margin-left: auto;
-  margin-right: auto;
-  width: 75vw;
+  width: 95vw;
+  margin: 0 auto;
+}
+
+.talkhead {
+  margin: 0 auto;
+}
+.talks .content {
+  margin: 0 auto;
+  justify-content: space-between;
+}
+
+h2 {
+  font-size: var(--fs-600);
+  line-height: 1.5;
+  color: var(--clr-objects);
+  width: max-content;
 }
 
 .contact {
   display: flex;
   flex-direction: column;
-  margin-left: auto;
-  margin-right: auto;
   width: 50vw;
+  margin: 0 auto;
+  padding: 2.5rem 0;
+}
+
+@keyframes fadeInUp {
+  to {
+    opacity: 1;
+    transform: translateY(1rem);
+  }
+}
+
+thead tr {
+  font-weight: var(--fw-bold);
+  color: var(--clr-bg-inverse-darker);
+}
+
+table {
+  width: 100%;
+  border-collapse: collapse;
+}
+/* Zebra striping */
+tr:nth-of-type(even) {
+  background: var(--clr-objects);
+  color: var(--clr-txt-inverse);
+}
+
+tr a {
+  color: inherit;
+}
+
+th {
+  background: #333;
+  color: white;
+  font-weight: bold;
+}
+td,
+th {
+  padding: 6px;
+  border: 1px solid #ccc;
+  text-align: left;
+}
+
+tr {
+  border: 1px solid var(--clr-bg-inverse);
+}
+
+@media (max-width: 850px) {
+  .primary-header .herotext {
+    font-size: var(--fs-600);
+    font-weight: var(--fw-regular);
+    margin-right: auto;
+  }
+
+  .intro,
+  .talks {
+    width: 90vw;
+  }
+
+  .intro h1 {
+    font-size: var(--fs-550);
+    width: max-content;
+  }
+
+  h2 {
+    font-size: var(--fs-550);
+    width: max-content;
+  }
+
+  .primary-navigation {
+    position: fixed;
+    /* font-size: 1.5rem; */
+    inset: 0 0 0 20%;
+    background-color: var(--txt-color);
+    color: var(--bg-color);
+    flex-direction: column;
+    transform: translateX(100%);
+    margin: 0;
+    padding: 0;
+    justify-content: center;
+    align-items: center;
+    transition: transform 350ms ease-out;
+  }
+
+  .primary-navigation[data-visible="true"] {
+    transform: translateX(0%);
+    margin-top: auto;
+    margin-bottom: auto;
+    align-items: center;
+    color: var(--clr-txt-inverse);
+    background-color: var(--clr-bg-inverse-darker);
+  }
+
+  .mobile-nav-toggle {
+    display: block;
+    position: absolute;
+    z-index: 999;
+    cursor: pointer;
+    width: 2.5rem;
+    height: 2.5rem;
+    right: 5rem;
+    background-color: transparent;
+    border: transparent;
+    opacity: 0;
+    animation: fadeInUp 100ms ease 1.3s forwards;
+  }
+  .bar {
+    height: 4px;
+    width: 100%;
+    /* background-color: red; */
+    background-color: var(--clr-objects);
+    display: block;
+    border-radius: 5px;
+    transition: 500ms ease;
+  }
+  #bar1 {
+    transform: translateY(-4px);
+  }
+  #bar3 {
+    transform: translateY(4px);
+  }
+
+  .change {
+    display: block;
+  }
+  .change .bar {
+    background-color: var(--clr-txt-inverse);
+  }
+  .change #bar1 {
+    transform: translateY(4px) rotateZ(-45deg);
+  }
+  .change #bar3 {
+    transform: translateY(-6px) rotate(45deg);
+  }
+  .change #bar2 {
+    opacity: 0;
+  }
+
+  table,
+  thead,
+  tbody,
+  th,
+  td,
+  tr {
+    display: block;
+  }
+
+  table {
+    width: 100%;
+    border-collapse: collapse;
+  }
+  /* Zebra striping */
+  tr:nth-of-type(even) {
+    background: var(--clr-objects);
+    color: var(--clr-txt-inverse);
+  }
+  th {
+    background: #333;
+    color: white;
+    font-weight: bold;
+  }
+  td,
+  th {
+    padding: 6px;
+    border: 1px solid #ccc;
+    text-align: left;
+  }
+  /* Hide table headers (but not display: none;, for accessibility) */
+  thead tr {
+    position: absolute;
+    top: -9999px;
+    left: -9999px;
+  }
+
+  tr {
+    border: 1px solid var(--clr-bg-inverse);
+  }
+
+  td {
+    /* Behave  like a "row" */
+    border: none;
+    border-bottom: 1px solid var(--clr-bg-inverse);
+    position: relative;
+    padding-left: 50%;
+  }
+
+  td:before {
+    /* Now like a table header */
+    position: absolute;
+    /* Top/left values mimic padding */
+    top: 6px;
+    left: 6px;
+    width: 45%;
+    padding-right: 10px;
+    white-space: nowrap;
+  }
+
+  td:nth-of-type(1):before {
+    content: "Speaker";
+  }
+  td:nth-of-type(2):before {
+    content: "Topic";
+  }
+  td:nth-of-type(3):before {
+    content: "Date";
+  }
+  td:nth-of-type(4):before {
+    content: "Poster";
+  }
+  td:nth-of-type(5):before {
+    content: "Slides";
+  }
 }
